summer_plans version1.1

--- a/stucampus/templates/summer_plans/ajax_plan_list.html
+++ b/stucampus/templates/summer_plans/ajax_plan_list.html
@@ -1,15 +1,34 @@
+{% load date_tools %}
 {% for plan in plan_list %}
 <li class="plan_li">
-	<p class="plan_author"><a href="#">{{ plan.author.szu_name }}</a></p>
+	<p class="plan_author">{{ plan.author.szu_name }}</p>
 	<p class="plan_content">{{ plan.content }}</p>
+	{% if plan.thought %} 
+	<p class="plan_thought_box">
+		<p class="thought_title">暑假过后:</p>
+		<p class="plan_thought">{{ plan.thought }}</p>
+	</p>
+	{% endif %}
 	<div class="function_wrapper">
-		<span class="create_time">{{ plan.create_date }}</span>
-		<span class="icon-thumbs-up like_btn" data-plan_id="{{plan.pk}}"></span>
+		<span class="create_time">{{ plan.create_date |from_now }}</span>
+		<span>from: {{ plan.author.szu_org_name }}</span>
+		{% ifequal plan.author.szu_no request.session.szu_no %}
+		<a class="delete_btn" href="{% url 'summer_plans:delete' plan_category.english_name plan.pk %}">删除</a>
+		{% endifequal %}
+		<p class="right_box">
+			{% if plan_category.tip_time|time_to_on and plan.author.szu_no == request.session.szu_no %}
+			<a class="post_thought" href="javascript:void(0);" data-url="{% url 'summer_plans:post_thought' plan_category.english_name plan.pk %}">发表感想</a>
+
+			{% endif %}
+			<span id="liked_tip{{plan.pk}}" class="liked_tip {% if request.session.szu_no not in plan.like_persons.all|show_szu_no %} hide {% endif %}">已赞</span>
+			
+			<span class="icon-thumbs-up like_btn" data-url="{% url 'summer_plans:like' plan_category.english_name %}?plan_id={{plan.pk}}" data-plan_id="{{ plan.pk }}"></span>
+		</p>
 	</div>
 	
 	<div class="like_persons_wrapper {% if not plan.like_persons.all %} hide {% endif %}" id="like_persons_wrapper{{plan.pk}}">
 		<img src="/static/images/summer_plan/l.png" alt="love" width="15px" height="15px;">
-		<span class="like_persons" id="like_persons{{plan.pk}}">{% for person in plan.like_persons.all %}{{ person.szu_name }},{% endfor %}</span>
+		<span class="like_persons" id="like_persons{{plan.pk}}">{{ plan.like_persons.all|show_name }}</span>
 	</div>
 	
 </li>
@@ -19,5 +38,5 @@
 {% if plan_list.has_next %}
 <div class="page_number">{{ plan_list.number }}</div>
 {% else %}
-<div class="page_number">没有更多文章了</div>
+<div class="page_number no_more_tip">没有更多了</div>
 {% endif %} 
