--- a/stucampus/static/styles/summer_plans/index.css
+++ b/stucampus/static/styles/summer_plans/index.css
@@ -20,7 +20,7 @@ body{
 .plan_list li
 {
 	padding: 10px;
-	border-bottom: 2px solid #eeeeee;
+	border-bottom: 3px solid #eeeeee;
 	text-align: left;
 }
 .plan_list li .plan_author
@@ -34,9 +34,13 @@ body{
 {
 	text-align: center;
 }
-.pull-right a
+.right_box .function_btn
 {
 	margin-right: 1.5em;
+}
+.my_icon
+{
+	vertical-align: middle;
 }
 .navbar{
 	position: fixed;
@@ -46,7 +50,6 @@ body{
 	padding: 10px;
 	font-size: 1.2em;
 	background-color: rgb(91,197,190);
-	overflow: hidden;
 	zoom:1;
 
 }
@@ -56,7 +59,6 @@ body{
 }
 header{
 	position: relative;
-	overflow: hidden;
 }
 header .logo
 {
@@ -67,6 +69,7 @@ header .logo
 header .theme_title
 {
 	vertical-align: middle;
+	font-size: 0.9em;
 }
 header .loadding_box
 {
@@ -75,22 +78,65 @@ header .loadding_box
 	z-index: 100;
 	left: 50%;
 }
+header .navbar span
+{
+	height: 100%;
+	vertical-align: middle;
+}
 .like_persons_wrapper
 {
 	padding: 5px;
 	color: #576b95;
 	background-color: #eeeeee;
 }
+.like_persons_wrapper img
+{
+	vertical-align: middle;
+}
 .like_persons_wrapper .like_persons
 {
 	word-break:break-word;
+	vertical-align: middle;
 }
 .function_wrapper{
 	font-size: 0.8em;
+	overflow: hidden;
+	zoom:1;
 }
+.function_wrapper span
+{
+	margin-right: 0.5em;
+}
+
+.function_wrapper .right_box 
+{
+	text-align: right;
+
+}
+.function_wrapper .right_box span,.function_wrapper .right_box a
+{
+	margin-right: 1.5em;
+}
+
 .plan_content{
 	padding:5px 20px ;
 	word-break:break-word;
+}
+.plan_thought_box
+{
+	border-top:1px dashed #7d7d7d;
+	padding:5px 10px ;
+	word-break:break-word;
+}
+.plan_thought
+{
+	word-break:break-word;
+	padding:5px 20px ;
+}
+.plan_thought_box .thought_title
+{
+	color: #272822;
+	margin-right: 0.7em;
 }
 #plan_form input,#plan_form textarea
 {
@@ -102,7 +148,19 @@ header .loadding_box
 	display: none;
 }
 
-#plan_form_error
+#plan_form_error,#thought_form_error
 {
 	color: red;
+}
+.page_number.no_more_tip
+{
+	display: block;
+	text-align: center;
+	margin-top: 10px;
+	font-size: 1.1em;
+}
+#search_input
+{
+	width: 95%;
+	margin: 0 auto;
 }
