--- a/stucampus/templates/summer_plans/index.html
+++ b/stucampus/templates/summer_plans/index.html
@@ -6,12 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="/static/images/stulogo.png" type="image/x-icon" rel="shortcut icon" />
 	{% load html_tools %}
-	{% load date_tools %}<!-- #用于算出距离现在的时间间隔-->
+	{% load date_tools %}<!-- #用于算出距离现在的时间间隔,并处理姓名，学号-->
 	<link rel="stylesheet" href="/static/scripts/plugins/bootstrap2.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/scripts/plugins/bootstrap2.3.2/css/bootstrap-responsive.css">
-	<!-- 加载动画库 start -->
-	{{ 'plugin/loadding/style.css' | as_css }}
-	<!-- 加载动画库 end -->
 	{{ 'summer_plans/index.css' | as_css }}
 
 
@@ -28,10 +25,15 @@
 			<p id="plan_form_error"></p>
 			<form id="plan_form">
 			{% csrf_token %}
-			<p><label for="id_content">计划:</label> <textarea class="form-control" cols="40" id="id_content" name="content" placeholder="写下你的计划吧" rows="3"></textarea></p>
-			<p><label for="id_email">邮箱:</label> <input class="form-control" id="id_email" name="email" placeholder="在暑假过后，我们将通过邮箱提醒您" type="email"></p>
-			</form>
-						
+			<p class="form_p"> <label for="id_content">计划:</label><textarea class="form-control" required="required" cols="40" id="id_content" name="content" placeholder="写下你的计划吧" rows="3" maxlength="1000"></textarea></p>
+			{% if not user.email %}
+			<p class="form_p">
+				<label for="id_email">邮箱:</label><input required="required" class="form-control" id="id_email" name="email" placeholder="在假期过后，我们将通过邮箱提醒您" type="email">
+			</p>
+			{% endif %}
+			<!-- <p class="form_p"></p> -->
+			<p class="form_inline"><label for="id_is_anon">匿名:</label> <input id="id_is_anon" name="is_anon" type="checkbox"><span id="alias_box" class="visi_hide"><input id="id_alias" maxlength="10" name="alias" type="text" placeholder="昵称"></span></p>
+			</form>				
 		</div>
 		<div class="modal-footer">
 			<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
@@ -42,15 +44,12 @@
 
 	<!-- 搜索（Modal） start -->
 	<div id="search" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h4 id="myModalLabel">搜索</h3>
-		</div>
 		<form id="search_form" action="{% url 'summer_plans:search' plan_category.english_name %}" method="GET">
 			<div class="modal-body">
-				<div class="col-xs-12 col-sm-12 modal_form_box">
-					<input id="search_input" type="text" name="q" placeholder="可模糊搜索发布内容，姓名，学院">
-				</div>
+				<p class="form_p">
+					<label for="search_input">搜索:</label>
+					<input id="search_input" type="text" required="required" name="q" placeholder="可模糊搜索发布内容，姓名或昵称，学院">
+				</p>
 			</div>
 		<div class="modal-footer">
 			<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
@@ -61,20 +60,14 @@
 <!-- /搜索.modal end-->
 <!-- 感悟 modal 由函数调用 start -->
 	<div id="thought_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="thought" aria-hidden="true">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h4 id="thought">写下你的感悟</h3>
-		</div>
-		
 		<div class="modal-body">
 			<div class="row">
 				<form id="thought_form">
 					{% csrf_token %}
 					<p id="thought_form_error"></p>
 					<div class="col-xs-12 col-sm-12 modal_form_box">
-						<p>
-							<label for="id_thought">感悟:</label>
-							 <textarea class="form-control" cols="40" id="id_thought" name="thought" placeholder="写下你的感悟" rows="10"></textarea>
+						<p class="form_p">
+							 <textarea class="form-control" cols="40" id="id_thought" name="thought" placeholder="写下你的感悟" rows="10" required="required" maxlength="1000"></textarea>
 						</p>			
 					</div>
 				</form>
@@ -97,6 +90,7 @@
 								<img src="/static/images/stucampus_logo.png" alt="szulogo">
 							</a>
 							<a href="{% url 'summer_plans:list' plan_category.english_name %}" class="theme_title">{{ plan_category.name }}</a>
+							<span class="theme_title">{{title}}</span>
 						</span>	
 						<span class="pull-right right_box">
 						<a href="#search" data-toggle="modal" class="function_btn"><i class="icon-search my_icon"></i> </a>
@@ -156,7 +150,12 @@
 						{% endif %}
 						{% for plan in plan_list %}
 						<li class="plan_li">
-							<p class="plan_author">{{ plan.author.szu_name }}</p>
+							{% if plan.author.is_anon %}
+							<p class="plan_author"><span class="show_last_name" style="background-color: {{ plan.author.get_avatar_color_display  }};">匿</span><span class="author_name">{{ plan.author.alias }}</span></p>
+							{% else %}
+							<p class="plan_author"><span class="show_last_name" style="background-color: {{ plan.author.get_avatar_color_display  }};">{{ plan.author.szu_name|show_last_name }}</span><span class="author_name">{{ plan.author.szu_name }}</span></p>
+							{% endif %}
+
 							<span class="author_szu_org">from: {{ plan.author.szu_org_name }}</span>
 							<p class="plan_content">{{ plan.content }}</p>
 							{% if plan.thought %} 
@@ -177,12 +176,14 @@
 									{% endif %}
 									<span id="liked_tip{{plan.pk}}" class="liked_tip {% if request.session.szu_no not in plan.like_persons.all|show_szu_no %} visi_hide {% endif %}">已赞</span>
 									
+									<img  class="loading visi_hide" id="like_loading{{plan.pk}}" src="/static/images/summer_plans/loading.gif" alt="loading">
+									
 									<span class="like_btn" data-url="{% url 'summer_plans:like' plan_category.english_name %}?plan_id={{plan.pk}}" data-plan_id="{{ plan.pk }}"><i class="icon-thumbs-up"></i></span>
 								</span>
 							</div>
 							
 							<div class="like_persons_wrapper {% if not plan.like_persons.all %} visi_hide {% endif %}" id="like_persons_wrapper{{plan.pk}}">
-								<img src="/static/images/summer_plan/l.png" alt="love" width="15px" height="15px;">
+								<img src="/static/images/summer_plans/l.png" alt="love" width="15px" height="15px;">
 								<span class="like_persons" id="like_persons{{plan.pk}}">{{ plan.like_persons.all|show_name }}</span>
 							</div>
 							
@@ -197,8 +198,8 @@
 						{% endif %} 
  						
 					</ul>
-					<div class="loader1 hide">
-	        			<i></i><i></i>
+					<div id="loading_plan_list">
+	        			<img src="/static/images/summer_plans/loading.gif" alt="loading">
 	        		</div>
 				</div>
 			</div>
