--- a/stucampus/templates/summer_plans/index.html
+++ b/stucampus/templates/summer_plans/index.html
@@ -200,7 +200,7 @@
 						{% endif %} 
  						
 					</ul>
-					<div id="loading_plan_list" class="hide">
+					<div id="loading_plan_list" class="visi_hide">
 	        			<img src="/static/images/summer_plans/loading.gif" alt="loading">
 	        		</div>
 				</div>
