--- a/stucampus/templates/summer_plans/ajax_plan_list.html
+++ b/stucampus/templates/summer_plans/ajax_plan_list.html
@@ -8,18 +8,18 @@
 	{% endif %}
 
 	<span class="author_szu_org">from: {{ plan.author.szu_org_name }}</span>
-	<p class="plan_content">{{ plan.content }}</p>
+	<div class="plan_content">{{ plan.content |linebreaks }}</div>
 	{% if plan.thought %} 
 	<p class="plan_thought_box">
 		<p class="thought_title">暑假过后:</p>
-		<p class="plan_thought">{{ plan.thought }}</p>
+		<div class="plan_thought">{{ plan.thought |linebreaks}}</div>
 	</p>
 	{% endif %}
 	<div class="function_wrapper clear-fixed">
 		<span class="pull-left">
 			<span class="create_time">{{ plan.create_date |from_now }}</span>
 			{% ifequal plan.author.szu_no request.session.szu_no %}
-			<a class="delete_btn" href="{% url 'summer_plans:delete' plan_category.english_name plan.pk %}">删除</a>
+			<a class="delete_btn" href="javascript:void(0);" data-url="{% url 'summer_plans:delete' plan_category.english_name plan.pk %}">删除</a>
 			{% endifequal %}
 		</span>
 		<span class="right_box pull-right">
